--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Oltási könyv weboldalon keresztül szülőknek">
-    <meta name="keywords" content="Oltas, OLTVAPP, Vakcina">
-    <meta name="author" content="Somogyi András, Somogyvári Márton, Mogyoródi Balázs">
+    <meta name="description" content="alap feladat">
+    <meta name="keywords" content="feladat, vizsga">
+    <meta name="author" content="Mogyoródi Balázs">
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="file:///Users/user/OneDrive/Document/test/jquery-2.1.4.min.js"></script>
@@ -16,8 +16,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-
-    </main>
+    <main></main>
 </body>
 </html>
